--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "author": "argf013",
   "license": "MIT",
   "devDependencies": {
-    "@netlify/functions": "^4.0.0",
+    "@netlify/functions": "^5.1.2",
     "@types/express": "^5.0.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "express": "^5.1.0",
+    "@nastyox/rando.js": "^2.0.6",
+    "express": "^5.2.1",
+    "jdenticon": "^3.3.0",
     "serverless-http": "^3.2.0"
   }
 }
