--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nastyox/rando.js": "^2.0.6",
     "express": "^5.2.1",
     "jdenticon": "^3.3.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "tsc": "^2.0.4"
   }
 }
