--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@nastyox/rando.js": "^2.0.6",
     "express": "^5.2.1",
+    "fast-xml-parser": "^5.3.7",
     "jdenticon": "^3.3.0",
     "serverless-http": "^3.2.0",
     "tsc": "^2.0.4"
